[tool.poetry]
name = "lidl-case-study"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lidl_case_study"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
seaborn = "^0.12.0"
black = "^22.8.0"
qbstyles = "^0.1.4"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
